--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,8 @@
 	color: #fff;
 }
 
-.topo-mobile{
+.topo-mobile,
+.info-partic .login-consulta{
 	display: none;
 }
 
@@ -56,6 +57,8 @@
 .topo-m p{
 	padding: 30px 0;
     max-width: 630px;
+    font-size: 18px;
+    line-height: 22px;
 }
 
 .topo-f{
@@ -103,7 +106,8 @@
     padding: 15px 0;
 }
 
-.info-partic .gp-cadastro a button{
+.info-partic .gp-cadastro a button,
+.btn-style{
 	width: 50%;
     padding: 10px 0;
     border-radius: 30px;
@@ -116,13 +120,16 @@
     cursor: pointer;
 }
 
-.info-partic .gp-cadastro button:hover{
+.info-partic .gp-cadastro .btn-style:hover{
 	background: linear-gradient(385deg, #03111d, transparent);
 }
 
 .info-partic .rodape-s{
 	background: #1569AE;
 	height: 80px;
+	display: flex;
+	justify-content: flex-end;
+	padding: 5px 180px;
 }
 
 .quem-somos{
@@ -135,7 +142,7 @@
 }
 
 .quem-somos img{
-	width: 500px;
+	width: 35%;
 	margin: 0 auto;
     padding: 20px 0;
 }
@@ -144,7 +151,7 @@
 .quem-somos p {
 	color: #000;
 	padding: 10px 0;
-	text-align:justify;
+	text-align:left;
 }
 
 .quem-somos h3{
@@ -185,6 +192,209 @@ footer .contato span{
     font-style: italic;
 }
 
+.modal {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	font-family: Arial, Helvetica, sans-serif;
+	background: rgba(0,0,0,0.8);
+	z-index: 99999;
+	opacity:0;
+	-webkit-transition: opacity 400ms ease-in;
+	-moz-transition: opacity 400ms ease-in;
+	transition: opacity 400ms ease-in;
+	pointer-events: none;
+	display: none;
+	height: 100%;
+	width: 100%;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.modal:target {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+/*.modal > div {
+  width: 400px;
+  position: relative;
+  margin: 10% auto;
+  padding: 15px 20px;
+  background: #fff;
+}*/
+
+#link-close {
+	font-size: 30px;
+    position: absolute;
+    top: -12px;
+    left: -12px;
+    cursor: pointer;
+}
+
+.formulario{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.formulario form{
+	text-align: center;
+	padding: 30px 20px;
+	margin: 0 auto;
+    max-width: 600px;
+    border: 2px solid #004b88;
+    background: #004b88;
+}
+.formulario form h2{
+	padding: 0 0 20px 0;
+}
+
+.formulario .form-gp{
+	justify-content: center;
+	padding: 10px 0;
+}
+
+.w50 {
+	width: 50%;
+}
+
+.formulario form label{
+	display: block;
+	text-align: left;
+	padding: 0 0 10px 10px;
+}
+
+
+.formulario form input{
+    border-radius: 7px;
+    border: 1px solid #1d7ac7;
+    padding: 10px;
+    font-size: 16px;
+    color: #000;
+    font-weight: 600;
+}
+
+.formulario form input[type=text],
+.formulario form input[type=email]{
+	width: 95%;
+}
+
+.formulario form .termo-resp{
+	justify-content: flex-start;
+	padding: 20px 10px;
+}
+
+.formulario form .pd{
+	padding: 0 10px 20px;
+}
+
+.formulario form input[type=checkbox]{
+	margin-right: 10px;
+}
+
+.formulario form button{
+	display: block;
+    margin: 0 auto;
+    color: #000;
+    padding: 10px 51px;
+    border-radius: 11px;
+    border: 1px solid #000;
+    font-weight: bold;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.formulario form button:hover{
+	background: #1d7ac7;
+    color: #fff;
+    border: 1px solid #fff;
+}
+
+.formulario h2,
+.formulario label,
+.formulario input,
+.formulario h2 button {
+	color: #fff;
+}
+
+.info-partic .login-consulta{
+	width: 230px;
+    height: 70px;
+    border: 1px solid #eee;
+    box-shadow: 17px 8px 13px 2px #004b88;
+}
+
+.info-partic .flex-login{
+	align-items: center;
+    justify-content: flex-start;
+    padding: 0;
+}
+
+.info-partic .login-consulta label{
+	display: block;
+    padding: 10px 0 5px 10px;
+}
+
+.info-partic .login-consulta input{
+	width: 130px;
+    margin-left: 10px;
+    border: 1px solid #eee;
+    color: #004b88;
+    padding: 0 5px;
+    font-weight: 600;
+}
+
+.info-partic .login-consulta button{
+	color: #eee;
+    font-weight: 600;
+    background-color: #004b88;
+    border: 1px solid #eee;
+    padding: 5px;
+    cursor: pointer;
+    transform: translate(23px, 6px);
+    font-size: 13px;
+}
+
+.info-partic .login-consulta button:hover{
+	background-color: #1569ae;
+}
+
+.form-modal .btn-load{
+	display: none;
+}
+
+.logo-erro{
+	display: block;
+    border: 1px solid #fff;
+    display: none;
+}
+
+#log-box{
+	text-align: center;
+    text-transform: uppercase;
+    padding: 10px;
+    background: #000;
+}
+
+.resultado-consulta{
+	width: 140%;
+    border: 1px solid #fff;
+    background: #004b88;
+    padding: 10px;
+    border-radius: 16px;
+    transform: translate(-350px, -50px);
+    display: none;
+}
+
+.resultado-consulta p {
+	text-align: center;
+}
+
 @media screen and (max-width: 1024px){
     .info-partic .gp-cadastro {
     	padding: 15px 10px;
@@ -192,6 +402,15 @@ footer .contato span{
 
     .quem-somos img {
     	width: 300px;
+	}
+}
+
+@media screen and (max-width: 860px){
+	.formulario{
+		width: 100%;
+	}
+	#link-close{
+		left: 98px;
 	}
 }
 
@@ -273,125 +492,26 @@ footer .contato span{
     	text-align: center;
 	}
 
-}
+	.formulario .form-gp{
+		align-items: flex-end;
+	}
 
-.modal {
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	font-family: Arial, Helvetica, sans-serif;
-	background: rgba(0,0,0,0.8);
-	z-index: 99999;
-	opacity:0;
-	-webkit-transition: opacity 400ms ease-in;
-	-moz-transition: opacity 400ms ease-in;
-	transition: opacity 400ms ease-in;
-	pointer-events: none;
-	display: none;
-	height: 100%;
-	width: 100%;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
+	.info-partic .flex-login{
+		padding: 0 10px;
+		flex-direction: row;
+		height: auto;
+		justify-content: space-between;
+	}
 
-.modal:target {
-  opacity: 1;
-  pointer-events: auto;
-}
+	.info-partic .login-consulta button{
+		transform: none;
+	}
 
-.modal > div {
-  width: 400px;
-  position: relative;
-  margin: 10% auto;
-  padding: 15px 20px;
-  background: #fff;
-}
+	.info-partic .rodape-s{
+		padding: 10px 10px;
+		justify-content: center;
+	}
 
-#link-close {
-	font-size: 30px;
-    position: absolute;
-    top: -12px;
-    left: -12px;
-    cursor: pointer;
-}
-
-.formulario{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
-.formulario form{
-	text-align: center;
-	padding: 30px 20px;
-	margin: 0 auto;
-    max-width: 600px;
-    border: 2px solid #000;
-    background: linear-gradient(135deg, black, #352e2e);
-}
-.formulario form h2{
-	padding: 0 0 20px 0;
-}
-
-.formulario .form-gp{
-	justify-content: center;
-	padding: 10px 0;
-}
-
-.w50 {
-	width: 50%;
-}
-
-.formulario form label{
-	display: block;
-	text-align: left;
-	padding: 0 0 10px 10px;
-}
-
-
-.formulario form input{
-    border-radius: 7px;
-    border: 1px solid #1d7ac7;
-    padding: 10px;
-    font-size: 16px;
-    color: #000;
-    font-weight: 600;
-}
-
-.formulario form input[type=text],
-.formulario form input[type=email]{
-	width: 95%;
-}
-
-.formulario form .termo-resp{
-	justify-content: flex-start;
-	padding: 20px 10px;
-}
-
-.formulario form input[type=checkbox]{
-	margin-right: 10px;
-}
-
-.formulario form button{
-	display: block;
-    margin: 0 auto;
-    color: #000;
-    padding: 10px 51px;
-    border-radius: 11px;
-    border: 1px solid #000;
-    font-weight: bold;
-    font-size: 18px;
-    cursor: pointer;
 
 }
 
-.formulario h2,
-.formulario label,
-.formulario input,
-.formulario h2 button {
-	color: #fff;
-}
